--- a/views/main/home.hbs
+++ b/views/main/home.hbs
@@ -6,7 +6,7 @@
   <form id="sendTweet">
     <input type="text" class="form-control" id="tweet">
     <br />
-    <button class="btn btn-primary">Tweet</button>
+    <button class="btn btn-primary">Chrip</button>
   </form>
 
   <br />
