--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Realtime Social Media</title>
+    <title>Chripy</title>
 
     
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
