--- a/views/main/home.hbs
+++ b/views/main/home.hbs
@@ -6,7 +6,7 @@
   <form id="sendTweet">
     <input type="text" class="form-control" id="tweet">
     <br />
-    <button class="btn btn-primary">Chrip</button>
+    <button class="btn btn-primary">chirp</button>
   </form>
 
   <br />
@@ -16,7 +16,9 @@
     {{#each tweets}}
     <div class="media">
       <div class="media-left">
-        <a href="/user/{{ owner._id }}"><img class="media-object" src="{{ owner.photo }}" /></a>
+        <a href="/user/{{ owner._id }}">
+          <img class="media-object" src="{{ owner.photo }}" />
+        </a>
       </div>
       <div class="media-body">
         <h4 class="media-heading">{{ owner.name }}</h4>
