--- a/views/main/user.hbs
+++ b/views/main/user.hbs
@@ -20,7 +20,7 @@
 
 
 <ul class="nav nav-tabs">
-  <li class="active"><a data-toggle="tab" href="#home">Chrips</a></li>
+  <li class="active"><a data-toggle="tab" href="#home">Chirps</a></li>
   <li><a data-toggle="tab" href="#menu1">Following</a></li>
   <li><a data-toggle="tab" href="#menu2">Followers</a></li>
 </ul>
