--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Chripy</a>
+      <a class="navbar-brand" href="/">Chirpy</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
       {{#if user }}
